# pite_project1

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  messy_project1.py  pite_lab1_2025.ipynb  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/pite_project1/: __init__.py  cli.py  config.py  core.py  data_generator.py  io_.py  usefullFunctions.py
tests/: test_cli.py  test_core.py  usefullFunctionsTest.py
