## pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acme-reporter"
version = "0.1.0"
description = "Mini reporting tool (class project)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Theo Nouet", email = "tnouet1306@gmail.com" }]
license = { text = "MIT" }
dependencies = [
  "typer>=0.12",
]

[project.scripts]
acme-reporter = "acme_reporter.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]